--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: product-microservice
   profiles:
-    active: stg
+    active: dev
   data:
     mongodb:
       host: localhost
