--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -12,6 +12,12 @@ spring:
       port: 27017
       database: test
 
+  boot:
+    admin:
+      client:
+        url:
+          - http://localhost:9090
+
 logging:
   file:
     name: d:\logs\product.log
