--- a/admin-server/gradle/wrapper/gradle-wrapper.properties
+++ b/admin-server/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Tue Feb 16 00:08:37 SGT 2021
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-bin.zip
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
