--- a/admin-server/src/main/resources/application.yml
+++ b/admin-server/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 server:
-  port: 9090
+  port: 9089
 
 spring:
   application:
     name: admin-server
+  main:
+    allow-bean-definition-overriding: true
 
   #Mail configuration
   mail:
