--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -26,8 +26,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation("io.springfox:springfox-swagger2:2.9.2")
-	implementation("io.springfox:springfox-swagger-ui:2.9.2")
+	//implementation("io.springfox:springfox-swagger2:2.9.2")
+	//implementation("io.springfox:springfox-swagger-ui:2.9.2")
+	compile "io.springfox:springfox-swagger-ui:2.9.2"
+	compile ("io.springfox:springfox-swagger2:2.9.2") {
+		exclude group: 'io.swagger', module: 'swagger-annotations'
+		exclude group: 'io.swagger', module: 'swagger-models'
+	}
+	compile "io.swagger:swagger-annotations:1.5.21"
+	compile "io.swagger:swagger-models:1.5.21"
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'de.codecentric:spring-boot-admin-starter-client'
 	compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
