initial commit of junit test case writing for service and controller

--- a/product-service/src/test/resources/application-test.yml
+++ b/product-service/src/test/resources/application-test.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: product-microservice in dev environment
+    name: product-microservice in test environment
   data:
     mongodb:
       host: localhost
@@ -14,3 +14,4 @@ product:
   currencies:
     - SGD
     - LKR
+    - USD
